--- a/Ex-2/index.html
+++ b/Ex-2/index.html
@@ -12,6 +12,15 @@
         margin-left: 50px;
         }
 
+         /* Add some styling to the login form */
+         .login-form {
+            max-width: 300px;
+            margin: 0 auto;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,7 +57,23 @@
         <area shape="circle" coords="547,253,15" alt="Carbon Mirror Caps" href="https://modbargains.com/rw-carbon-bmw-m5-m8-cf-mirror-cap-replacements-bmwf9018/" target="_blank">        
     </map>
 
+        <!-- Add a login form -->
+        <div class="login-form">
+            <h2>Login</h2>
+            <form action="login.php" method="post">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required><br><br>
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required><br><br>
+                <button type="submit">Login</button>
+            </form>
+        </div>
+
 </body>
 </html>
+
+
+
+
 
 
